--- a/app/style/styles.css
+++ b/app/style/styles.css
@@ -62,34 +62,15 @@
 
 @layer components {
 
-  .arrow{
-    transform: translateX(-.8rem);
-  }
-  .arrow::before{
-     content: "";
-     background-image: url('../src/arrow.svg');
-     background-size: cover;
-     display: inline-block;
-     vertical-align: middle;
-     width: .70rem;
-     height: .75rem;
-     margin-right: .8rem;
-  }
-  .linea-derecha::before{
-     content: "";
-     display: inline-block;
-     width: 25%;
-     height: 2px;
-     margin-right: 3rem;
-     background-color: #D24545;
-  }
-  .linea-izquierda::after{
-     content: "";
-     display: inline-block;
-     width: 25%;
-     height: 2px;
-     margin-left: 3rem;
-     background-color: #D24545;
+  .linea-menu::before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    width: 4.5rem;
+    height: 2px;
+    bottom: -.3rem;
+    left: -1rem;
+    background-color: #e5e7eb;
   }
 
   .text-gradient {
@@ -126,6 +107,44 @@
     color: rgba(88, 87, 87, 0.822);
     font-size: 14px;
   }
+
+  /* Estilos para dispositivos móviles */
+@media (max-width: 1024px) {
+  /* carrusel */
+  .slide-track {
+    width: calc(80vw * 6);
+    animation: scroll 5s linear infinite;
+  }
+
+  .slide-track:active {
+    animation-play-state: paused;
+ }
+ 
+  .custom-slide {
+    perspective: 100px;
+  }
+
+  /* Agrega estilos de transición suaves para un desplazamiento agradable */
+  .custom-slide img {
+    transition: transform 1s;
+  }
+
+  .custom-slide img:active {
+    transition: transform 1s;
+    transform: translateZ(10px);
+  }
+
+  /* Animación de desplazamiento */
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-81vw * 3));
+    }
+  }
+}
+
 
   .flexform {
     display: flex;
