--- a/app/style/styles.css
+++ b/app/style/styles.css
@@ -14,27 +14,43 @@
   }
 }
 
-.swiper {
+.section-blog .swiper {
   max-width: 50rem;
   height: 30rem;
 }
 
-.swiper-pagination {
-  position: absolute;
-  bottom: 4rem !important;
-}
-
-.swiper .swiper-slide {
+.section-blog .swiper .swiper-slide {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.swiper .swiper-pagination-bullet-active {
+.section-blog .swiper .swiper-pagination-bullet-active {
   background-color: #E72929;
 }
 
-.swiper .swiper-pagination-bullet {
+.section-blog .swiper .swiper-pagination-bullet {
+  background-color: #E72929;
+}
+
+.section-routes-swiper .swiper {
+  max-width: 100%;
+  height: 28rem;
+}
+
+.section-routes-swiper .swiper .swiper-slide {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 25rem;
+  width: 90vw !important;
+}
+
+.section-routes-swiper .swiper .swiper-pagination-bullet-active {
+  background-color: #E72929;
+}
+
+.section-routes-swiper .swiper .swiper-pagination-bullet {
   background-color: #E72929;
 }
 
@@ -62,6 +78,31 @@
 
 @layer components {
 
+  /* noise */
+  .noise {
+    position: fixed;
+    inset: 0;
+    height: 100%;
+    width: 100%;
+    pointer-events: none;
+    z-index: -999;
+  }
+
+  .noise::before {
+    opacity: .2;
+    content: "";
+    background-image: url("../src/noise.svg");
+    background-repeat: repeat;
+    background-size: 182px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -999;
+  }
+
+
   .linea-menu::before {
     content: "";
     position: absolute;
@@ -71,13 +112,6 @@
     bottom: -.3rem;
     left: -1rem;
     background-color: #e5e7eb;
-  }
-
-  .text-gradient {
-    background: #CF7F7F;
-    background: linear-gradient(to right, #CF7F7F 0%, #D24545 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
   }
 
   .animacionY {
@@ -109,41 +143,41 @@
   }
 
   /* Estilos para dispositivos móviles */
-@media (max-width: 1024px) {
-  /* carrusel */
-  .slide-track {
-    width: calc(80vw * 6);
-    animation: scroll 5s linear infinite;
-  }
+  @media (max-width: 1024px) {
 
-  .slide-track:active {
-    animation-play-state: paused;
- }
- 
-  .custom-slide {
-    perspective: 100px;
-  }
-
-  /* Agrega estilos de transición suaves para un desplazamiento agradable */
-  .custom-slide img {
-    transition: transform 1s;
-  }
-
-  .custom-slide img:active {
-    transition: transform 1s;
-    transform: translateZ(10px);
-  }
-
-  /* Animación de desplazamiento */
-  @keyframes scroll {
-    0% {
-      transform: translateX(0);
+    /* carrusel */
+    .slide-track {
+      animation: scroll 8s linear infinite;
     }
-    100% {
-      transform: translateX(calc(-81vw * 3));
+
+    .slide-track:active {
+      animation-play-state: paused;
+    }
+
+    .custom-slide {
+      perspective: 100px;
+    }
+
+    /* Agrega estilos de transición suaves para un desplazamiento agradable */
+    .custom-slide img {
+      transition: transform 1s;
+    }
+
+    .custom-slide img:active {
+      transition: transform 1s;
+      transform: translateZ(10px);
+    }
+
+    @keyframes scroll {
+      0% {
+        transform: translateX(0);
+      }
+
+      100% {
+        transform: translateX(-100%);
+      }
     }
   }
-}
 
 
   .flexform {
@@ -222,105 +256,37 @@
 
 
   /* Btn */
-  .fancy {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: auto;
-    background-color: transparent;
-    border: 2px solid #D24545;
-    border-radius: 0px;
-    color: #fff;
-    cursor: pointer;
-    font-weight: 400;
-    letter-spacing: 2px;
-    margin: 0;
-    padding: 8px 40px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    text-transform: none;
-    transition: all 0.3s ease-in-out;
-    user-select: none;
-    font-size: 13px;
-  }
-
-  .text {
-    font-size: 1.125em;
-    line-height: 1.33333em;
-    display: block;
-    position: relative;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
-    text-decoration: none;
-    color: #FFFFFF;
-    text-transform: uppercase;
-  }
-
-  .text::before {
-    content: " ";
-    width: 1.5rem;
-    height: 2px;
-    background: #D24545;
-    top: 50%;
-    left: 2rem;
-    position: absolute;
-    transition: background 0.3s linear, width 0.3s linear;
-  }
-
-  .top-key {
-    height: 2px;
-    width: 1.5625rem;
-    top: -2px;
-    left: 0.625rem;
-    position: absolute;
-    background: #1E293B;
-    transition: width 0.5s ease-out, left 0.3s ease-out;
-  }
-
-  .bottom-key-1 {
-    height: 2px;
-    width: 1.5625rem;
-    right: 1.875rem;
-    bottom: -2px;
-    position: absolute;
-    background: #1E293B;
-    transition: width 0.5s ease-out, right 0.3s ease-out;
-  }
-
-  .bottom-key-2 {
-    height: 2px;
-    width: 0.625rem;
-    right: 0.625rem;
-    bottom: -2px;
-    position: absolute;
-    background: #1E293B;
-    transition: width 0.5s ease-out, right 0.3s ease-out;
-  }
-
-  .fancy:hover {
+  .btn {
     color: #D24545;
-    background: #D24545;
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 1px solid #D24545;
+    padding: 10px 20px;
+    background: transparent;
+    position: relative;
+    transition: all 1s;
+    overflow: hidden;
   }
 
-  .fancy:hover::before {
-    background: #D24545;
-  }
-
-  .fancy:hover .text {
+  .btn:hover {
     color: white;
   }
 
-  .fancy:hover .top-key {
-    left: -2px;
-    width: 0px;
+  .btn::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    top: 0;
+    left: -40px;
+    transform: skewX(45deg);
+    background-color: #D24545;
+    z-index: -1;
+    transition: all 1s;
   }
 
-  .fancy:hover .bottom-key-1,
-  .fancy:hover .bottom-key-2 {
-    right: 0;
-    width: 0;
+  .btn:hover::before {
+    width: 160%;
   }
 
   /* btnToggle */
