--- a/app/style/styles.css
+++ b/app/style/styles.css
@@ -196,7 +196,7 @@
     width: 100%;
     padding: .5rem;
     outline: 0;
-    border: 1px solid rgba(105, 105, 105, 0.397);
+    border: 1px solid rgb(229 231 235);
     border-radius: 5px;
     margin-bottom: 1rem;
   }
@@ -224,7 +224,7 @@
     width: 100%;
     padding: 10px 10px 30px 10px;
     outline: 0;
-    border: 1px solid rgba(105, 105, 105, 0.397);
+    border: 1px solid rgb(229 231 235);
     border-radius: 5px;
   }
 
@@ -256,38 +256,41 @@
 
 
   /* Btn */
-  .btn {
-    color: #D24545;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 1px solid #D24545;
-    padding: 10px 20px;
-    background: transparent;
+  .custom-button {
+    --green: #FF204E;
+    padding: 0.7em 2.7em;
+    letter-spacing: 0.06em;
     position: relative;
-    transition: all 1s;
+    border-radius: 0.6em;
     overflow: hidden;
+    transition: all 0.3s;
+    line-height: 1.4em;
+    border: 2px solid var(--green);
+    background: linear-gradient(to right, rgba(182, 41, 6, 0.1) 1%, transparent 40%, transparent 60%, rgba(231, 23, 8, 0.1) 100%);
+    color: var(--green);
+    box-shadow: inset 0 0 10px rgba(228, 52, 8, 0.4), 0 0 9px 3px rgba(223, 49, 5, 0.1);
   }
-
-  .btn:hover {
-    color: white;
+  
+  .custom-button:hover {
+    color: #FF204E;
+    box-shadow: inset 0 0 10px rgba(211, 55, 7, 0.6), 0 0 9px 3px rgba(179, 54, 5, 0.2);
   }
-
-  .btn::before {
-    content: '';
+  
+  .custom-button::before {
+    content: "";
     position: absolute;
+    left: -4em;
+    width: 4em;
     height: 100%;
-    width: 0%;
     top: 0;
-    left: -40px;
-    transform: skewX(45deg);
-    background-color: #D24545;
-    z-index: -1;
-    transition: all 1s;
+    transition: transform .4s ease-in-out;
+    background: linear-gradient(to right, transparent 1%, rgba(248, 18, 18, 0.1) 40%, rgba(223, 12, 5, 0.1) 60%, transparent 100%);
   }
-
-  .btn:hover::before {
-    width: 160%;
+  
+  .custom-button:hover::before {
+    transform: translateX(15em);
   }
+  
 
   /* btnToggle */
 
