--- a/app/style/styles.css
+++ b/app/style/styles.css
@@ -142,43 +142,7 @@
     font-size: 14px;
   }
 
-  /* Estilos para dispositivos móviles */
-  @media (max-width: 1024px) {
-
-    /* carrusel */
-    .slide-track {
-      animation: scroll 8s linear infinite;
-    }
-
-    .slide-track:active {
-      animation-play-state: paused;
-    }
-
-    .custom-slide {
-      perspective: 100px;
-    }
-
-    /* Agrega estilos de transición suaves para un desplazamiento agradable */
-    .custom-slide img {
-      transition: transform 1s;
-    }
-
-    .custom-slide img:active {
-      transition: transform 1s;
-      transform: translateZ(10px);
-    }
-
-    @keyframes scroll {
-      0% {
-        transform: translateX(0);
-      }
-
-      100% {
-        transform: translateX(-100%);
-      }
-    }
-  }
-
+  /* formulario */
 
   .flexform {
     display: flex;
@@ -195,9 +159,6 @@
   .input {
     width: 100%;
     padding: .5rem;
-    outline: 0;
-    border: 1px solid rgb(229 231 235);
-    border-radius: 5px;
     margin-bottom: 1rem;
   }
 
@@ -223,9 +184,6 @@
   .input01 {
     width: 100%;
     padding: 10px 10px 30px 10px;
-    outline: 0;
-    border: 1px solid rgb(229 231 235);
-    border-radius: 5px;
   }
 
   .form label .input01+span {
