--- a/app/style/styles.css
+++ b/app/style/styles.css
@@ -14,6 +14,77 @@
   }
 }
 
+@font-face {
+  font-family: 'ClashDisplay-Extralight';
+  src: url('./fonts//ClashDisplay-Extralight.woff2') format('woff2'),
+    url('./fonts/ClashDisplay-Extralight.woff') format('woff'),
+    url('./fonts/ClashDisplay-Extralight.ttf') format('truetype');
+  font-weight: 200;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ClashDisplay-Light';
+  src: url('./fonts/ClashDisplay-Light.woff2') format('woff2'),
+    url('./fonts/ClashDisplay-Light.woff') format('woff'),
+    url('./fonts/ClashDisplay-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ClashDisplay-Regular';
+  src: url('./fonts/ClashDisplay-Regular.woff2') format('woff2'),
+    url('./fonts/ClashDisplay-Regular.woff') format('woff'),
+    url('./fonts/ClashDisplay-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ClashDisplay-Medium';
+  src: url('./fonts/ClashDisplay-Medium.woff2') format('woff2'),
+    url('./fonts/ClashDisplay-Medium.woff') format('woff'),
+    url('./fonts/ClashDisplay-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ClashDisplay-Semibold';
+  src: url('./fonts/ClashDisplay-Semibold.woff2') format('woff2'),
+    url('./fonts/ClashDisplay-Semibold.woff') format('woff'),
+    url('./fonts/ClashDisplay-Semibold.ttf') format('truetype');
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ClashDisplay-Bold';
+  src: url('./fonts/ClashDisplay-Bold.woff2') format('woff2'),
+    url('./fonts/ClashDisplay-Bold.woff') format('woff'),
+    url('./fonts/ClashDisplay-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ClashDisplay-Variable';
+  src: url('./fonts/ClashDisplay-Variable.woff2') format('woff2'),
+    url('./fonts/ClashDisplay-Variable.woff') format('woff'),
+    url('./fonts/ClashDisplay-Variable.ttf') format('truetype');
+  font-weight: 200 700;
+  font-display: swap;
+  font-style: normal;
+}
+
+
 .section-blog .swiper {
   max-width: 50rem;
   height: 30rem;
@@ -33,6 +104,30 @@
   background-color: #E72929;
 }
 
+@media (min-width: 1025px) {
+  .section-blog .swiper {
+    max-width: unset;
+    width: 100%;
+    height: 100%;
+  }
+
+  .section-blog .swiper .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 1 !important;
+  }
+
+  .section-blog .swiper .swiper-pagination-bullet-active {
+    background-color: #E72929;
+  }
+
+  .section-blog .swiper .swiper-pagination-bullet {
+    background-color: #E72929;
+  }
+}
+
+/* routs*/
 .section-routes-swiper .swiper {
   max-width: 100%;
   height: 28rem;
@@ -78,6 +173,10 @@
 
 @layer components {
 
+  .__carousel {
+    scroll-snap-type: x mandatory;
+  }
+
   /* noise */
   .noise {
     position: fixed;
@@ -111,7 +210,7 @@
     height: 2px;
     bottom: -.3rem;
     left: -1rem;
-    background-color: #e5e7eb;
+    background-color: #36392D;
   }
 
   .animacionY {
@@ -154,12 +253,6 @@
     position: relative;
     text-transform: uppercase;
     font-size: .7rem;
-  }
-
-  .input {
-    width: 100%;
-    padding: .5rem;
-    margin-bottom: 1rem;
   }
 
   .form label .input+span {
@@ -228,12 +321,12 @@
     color: var(--green);
     box-shadow: inset 0 0 10px rgba(228, 52, 8, 0.4), 0 0 9px 3px rgba(223, 49, 5, 0.1);
   }
-  
+
   .custom-button:hover {
     color: #FF204E;
     box-shadow: inset 0 0 10px rgba(211, 55, 7, 0.6), 0 0 9px 3px rgba(179, 54, 5, 0.2);
   }
-  
+
   .custom-button::before {
     content: "";
     position: absolute;
@@ -244,11 +337,11 @@
     transition: transform .4s ease-in-out;
     background: linear-gradient(to right, transparent 1%, rgba(248, 18, 18, 0.1) 40%, rgba(223, 12, 5, 0.1) 60%, transparent 100%);
   }
-  
+
   .custom-button:hover::before {
     transform: translateX(15em);
   }
-  
+
 
   /* btnToggle */
 
@@ -311,4 +404,28 @@
     transform: rotate(-45deg);
     transition-delay: calc(0s + 0.25s * 1.3), calc(0s + 0.25s * 1.3);
   }
+
+  /* scroll */
+
+
+
+  .custom-scroll::-webkit-scrollbar {
+    height: .9rem;
+    background-color: #CFD2C6;
+  }
+
+  @-moz-document url-prefix() {
+    .custom-scroll {
+    scrollbar-color: #36392D #CFD2C6;
+   }
+  }
+
+  .custom-scroll::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #36392D;
+    width: 2rem;
+  }
+
+
+
 }
